<resources>
    <string name="app_name">aplicatie_admin</string>

    <string name="label_username">Username</string>
    <string name="label_password">Password</string>
    <string name="btn_login">Login</string>
    <string name="label_server_ip">Server IP</string>

    <string name="action_about">About</string>
    <string name="about_link"><a href='https://github.com/andreivasilescu1995/aplicatie_admin/tree/Android/app/src/main/java'>Github source</a></string>
    <string name="about_sign">"@Vasilescu Andrei"</string>

    <string name="error">Error</string>

    <string name="action_maps_normal">Normal map</string>
    <string name="action_maps_satellite">Satellite map</string>
    <string name="action_maps_terrain">Terrain map</string>

    <string name="tv_no_devices">No devices online!</string>
    <string name="label_id">ID</string>
    <string name="label_ip">IP</string>
    <string name="label_route">Route</string>

    <string name="tab_location">Location</string>
    <string name="tab_devices_list">Online devices</string>
    <string name="tab_device_options">Device options</string>

    <string name="location_fragment">location</string>
    <string name="log_fragment">Log</string>
    <string name="settings_fragment">settings</string>

    <string name="btn_start">START</string>
    <string name="btn_stop">STOP</string>
    <string name="tv_status">Programul principal: </string>
    <string name="status_on">este activ</string>
    <string name="status_off">este inactiv</string>
    <string name="status_default">device offline</string>
    <string name="poweroff">Poweroff</string>
    <string name="title_activity_devices_options">DevicesOptionsActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>

    <string name="progress_bar_default_message">Loading</string>
</resources>
