<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DeviceOptionsActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <LinearLayout
            android:id="@+id/status_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tv_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_status"
                android:layout_marginBottom="10dp" />

            <TextView
                android:id="@+id/tv_status_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp
"
                android:text="@string/status_default"
                android:layout_toRightOf="@+id/tv_status" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_start"
            android:layout_below="@+id/status_layout"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"/>

        <Button
            android:id="@+id/btn_stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_stop"
            android:layout_below="@+id/btn_start"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"/>

        <Button
            android:id="@+id/btn_poweroff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_stop"
            android:layout_centerHorizontal="true"
            android:text="@string/poweroff" />

    </RelativeLayout>

</RelativeLayout>